soprano (2.7.6+dfsg.1-0r1) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * New upstream release:
    - soprano does not use installdox anymore. (Closes: #674346)
  * Refresh the patches.
  * Bump Standards-Version to 3.9.3, no changes required.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:44:51 -0300

soprano (2.7.5+dfsg.1-1) unstable; urgency=low

  * Team upload.
  * New upstream release.
  * Update uploaders (remove Armin).

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Sun, 04 Mar 2012 21:41:08 +0100

soprano (2.7.3+dfsg.1-1) experimental; urgency=low

  * New upstream release. (Closes: #641475)

  [ Daniele E. Domenichelli ]
  * Update libsoprano4.symbols.

  [ José Manuel Santamaría Lema ]
  * Pass -DSOPRANO_DISABLE_SESAME2_BACKEND=ON to cmake. (Closes: #649443)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:44:51 -0300

soprano (2.6.0+dfsg.1-4) unstable; urgency=low

  * Bump Standards-Version to 3.9.2: no changes needed.
  * Replace $(overriden_command) with $(overridden_command) in debian/rules.
    Requires pkg-kde-tools 0.12.
  * Use redland cflags (from redland-config) when building redland stuff. Fixes
    FTBFS due to missing /usr/include/raptor2 in the include path (patch
    redland_raptor2_support.h improved).
  * Update libsoprano4.symbols.

 -- Modestas Vainius <modax@debian.org>  Thu, 23 Jun 2011 12:52:37 +0300

soprano (2.6.0+dfsg.1-3) unstable; urgency=low

  * Fix symbol files to support both gcc 4.4 and Qt 4.6 configurations.
    Fixes FTBFS.

 -- Modestas Vainius <modax@debian.org>  Wed, 23 Mar 2011 19:10:49 +0200

soprano (2.6.0+dfsg.1-2) unstable; urgency=low

  * Remove debian/README.source: not necessary as of 3.0 (quilt).
  * Add support for raptor V2 to the redland backend.
    (patch redland_raptor2_support.h) and start building it again
    (Closes: #615487)

 -- Modestas Vainius <modax@debian.org>  Tue, 22 Mar 2011 20:40:12 +0200
