@@ -5,6 +5,7 @@ soprano (2.7.6+dfsg.1-0r1) UNRELEASED; urgency=low
     - soprano does not use installdox anymore. (Closes: #674346)
   * Refresh the patches.
   * Bump Standards-Version to 3.9.3, no changes required.
+  * Generate the apidox only when libsoprano-doc is being built too.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:44:51 -0300
 
